# GBconfusion

./: .gitignore  README.md  preprocess_catalog.py  pyproject.toml
src/GBconfusion/: catalog_handling.py  catalog_handling_compositions.py  iteration_utils.py  lisa_psd.py  preprocess_catalog_tools.py  snr.py
src/galconfusion/: __init__.py  catalog_handling_compositions.py  iteration_utils.py  lisa_psd.py  preprocess_catalog_tools.py  snr.py
